remove(path.size() - 1) -> removeLast()